--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hogan.js": "^3.0.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.5",
